# templ-cpp-cmake-vscode

./: CMakeLists.txt  README.md
lib-alib/: CMakeLists.txt  alib.cpp  alib.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  all-tests.cpp
